--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,21 @@
 
 
 body {
-	
-background-color:#e25353 /*#42bff4*/;
+
+background-color: #e25353 /*Blue: #42bff4*/;
 text-align:center;
+
+
+position: fixed;
+width:100%;
+height:100%;
+background-position: center center;
+background-repeat: no-repeat;
+
+background: url(mountainbackground.jpg);
+background-size:1400px 800px;
+
+
 
 }
 
@@ -19,10 +31,12 @@ div{
 	right:0;
 	margin:auto;
 	
-	background-color:#e8f2f7;
-	box-shadow:10px 10px 10px  #888888;
+	background-color: #e8f2f7;
+	/*box-shadow:10px 10px 10px  #888888;*/
 	border-radius: 3px;
 	vertical-align:middle;
+	
+	opacity:0.9;
 }
 h1{
 	text-align:center;
@@ -39,14 +53,15 @@ input{
 	-moz-transition:all .1s ease-in;
 	-o-transition: all .1s ease-in;
 	-webkit-transition:all .1s ease-in;
-	transition: all .1s ease-in;
-	
+	transition: all .1s ease-in;	
+	opacity:0.9;
 
 }
 input:hover{
 	-moz-box-shadow: 5px 5px 5px #888888;
 	-webkit-box-shadow: 5px 5px 5px #888888;
 	box-shadow: 5px 5px 5px #888888;
+	opacity:1;
 }
 button{
 	text-align:center;
@@ -54,7 +69,7 @@ button{
 	font-style: italic;
 	font-weight:bold;
 	font-size:30px;
-	background-color:#e25353; /*#42bff4;*/
+	background-color:#557180; /*#42bff4;*/
 	color:white;
 	width:150px;
 	height:50px;
@@ -65,12 +80,14 @@ button{
 	-o-transition: all .1s ease-in;
 	-webkit-transition:all .1s ease-in;
 	transition: all .1s ease-in;
+	
+	opacity:1;
 }
 button:hover{
 	-moz-box-shadow: 5px 5px 5px #888888;
 	-webkit-box-shadow: 5px 5px 5px #888888;
 	box-shadow: 5px 5px 5px #888888;
-	background-color: /*#ffaf54*/#e8ff1e;
+	background-color: /*#ffaf54*/#E1A075;
 	color:black;
 }
 ul {
@@ -78,7 +95,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: /*#2cade0*/#bc1616;
+    background-color: /*#2cade0*/#557180;
     margin-left:auto;
     margin-right:auto;
 }
@@ -93,16 +110,15 @@ li a {
     text-align: center;
     padding: 16px;
     text-decoration: none;
+    text-transform:capitalize;
+ 
 }
 
 li a:hover {
 	color: black;
-    background-color: /*#ffaf54*/#e8ff1e;
+    background-color: /*#ffaf54*/#E1A075;
 }
 p{
 	padding-left:5px;
 	padding-right:5px;
 }
-
-
-
