--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ background-position: center center;
 background-repeat: no-repeat;
 
 background: url(mountainbackground.jpg);
-background-size:1400px 800px;
+background-size:1920px 1080px;
 
 
 
@@ -91,7 +91,7 @@ button:hover{
 	color:black;
 }
 ul {
-    list-style-type: none;
+    list-style-type:none;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -108,9 +108,10 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 16px;
+    padding: 18px;
     text-decoration: none;
     text-transform:capitalize;
+    font-size:16px;
  
 }
 
@@ -121,4 +122,14 @@ li a:hover {
 p{
 	padding-left:5px;
 	padding-right:5px;
+}
+.userfunctions{
+	display: inline-block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    text-transform:capitalize;
+    font-size:16px;
+    width:auto;
+    float: left;
 }
