--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,17 @@ input:hover{
 	box-shadow: 5px 5px 5px #888888;
 	opacity:1;
 }
+input.voteradio{
+	font-size:12px;
+	font-family:Verdana;
+	text-align:center;
+	vertical-align:middle;
+	margin: 0px;
+	width:15px;
+	height:15px;
+	padding:0;
+}
+
 button{
 	text-align:center;
 	font-family:Verdana;
@@ -152,5 +163,11 @@ p{
     width:auto;
     float: left;
     
+}
+img{
+	height:100%;
+	width:100%;
+	margin-bottom:25px;
+	align:center;
 }
 
